# research-helper

./: .gitignore  workflow.md
.cursor/rules/: 000-cursor-rules.mdc
.github/: pull_request_template.md
code/deep_researcher/: .pdm-python  firebase_helper.py  main.py  manager.py  pyproject.toml  run_workflow.py  test_abstract_screening.py  test_arxiv.py  test_arxiv_search.py  test_asa.py  test_kaa.py  test_keyword_analysis.py  test_rqa.py  test_search.py  test_workflow.py  test_workflow_debug.py  types.md
code/deep_researcher/deep_researcher/: __init__.py  __main__.py  workflow_manager.py
code/deep_researcher/deep_researcher/research_agents/: abstract_screening_agent.py  asa.py  axa.py  kaa.py  keyword_analysis_agent.py  orchestrator.py  research_question_agent.py  rqa.py  search_agent.py  search_execution_agent.py  test_search_execution.py  test_workflow.py  types.py  workflow.py  workflow_orchestrator.py
code/deep_researcher/docs/: keyword_refinement_agent.md
code/deep_researcher/examples/: interactive_keyword_analysis.py  interactive_question.py
code/deep_researcher/models/: base.py
code/deep_researcher/old/: keyword_agent.py  planner_agent.py  test_abstract_screening.py  writer_agent.py
code/deep_researcher/research_agents/: __init__.py  abstract_screening_agent.py  firebase_helper.py  keyword_analysis_agent.py  keyword_refinement.py  planner_agent.py  research_question_agent.py  search_agent.py  search_execution_agent.py  types.py  workflow.py  writer_agent.py
code/deep_researcher/tests/: conftest.py  orchestrator.py  test_keyword_agent.py  test_planner_agent.py  test_research_question.py  test_research_workflow.py  test_search_agent.py  test_writer_agent.py
