[project]
name = "deep_researcher"
version = "0.1.0"
description = "A systematic literature review tool using AI agents"
authors = [
    {name = "David Kreuzer", email = "david.kreuzer@example.com"},
]
dependencies = [
    "arxiv>=2.1.3",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
] 