[project]
name = "deep_researcher"
version = "1.0.0"
description = "An AI-powered research assistant for systematic literature reviews"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.9.4",
    "arxiv>=2.1.3",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.1",
    "openai-agents>=0.0.6",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
] 